--- a/.env.prod
+++ b/.env.prod
@@ -1,14 +1,16 @@
-# Config secret key.
-APP_SECRET_KEY=4DwdUAakscTBxVW6wSEA2MmqU3HBMjR2
-
 # Config mailer.
-APP_MAIL_HOST=smtp.google.com
-APP_MAIL_PORT=587
-APP_MAIL_USERNAME=example@gmail.com
-APP_MAIL_PASSWORD=123456
+MAIL_BASE_URL=http://localhost:3000
+MAIL_FROM="Application Mailer <example@gmail.com>"
+MAIL_HOST=smtp.google.com
+MAIL_PORT=587
+MAIL_USERNAME=example@gmail.com
+MAIL_PASSWORD=123456
 
 # Config Mongo.
-APP_MONGO_ADDRS=mongo:27017
+MONGO_ADDRS=mongo:27017
 MONGO_INITDB_DATABASE=demo
 MONGO_INITDB_ROOT_USERNAME=demo
 MONGO_INITDB_ROOT_PASSWORD=123
+
+# Config secret key.
+SECRET_KEY=4DwdUAakscTBxVW6wSEA2MmqU3HBMjR2
