Define an example mail base url for production

--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
 # Config mailer.
-MAIL_BASE_URL=http://localhost:3000
+MAIL_BASE_URL=https://example.com
 MAIL_FROM="Application Mailer <example@gmail.com>"
 MAIL_HOST=smtp.google.com
 MAIL_PORT=587
